--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 64.5%;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+button {
+  background: none;
+  border: none;
+}
+
+select {
+  background: none;
+  border: 0.05rem solid #DBDBDB;
+  border-radius: 5px;
+  outline: none;
+  width: 12rem;
+  padding: 0 0.2rem;
+}
+
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background-color: #F4F5F8;
   min-height: 100vh;
+}
+
+.card {
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin: 10px;
+  padding: 15px;
+  background-color: #fff;
+}
+
+.card-body h3 {
+  font-size: 18px;
+  margin: 10px 0;
+}
+
+.card-body p {
+  font-size: 14px;
+  margin: 5px 0;
+}
+
+.group-container {
+  margin-top: 2rem;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  gap: 5rem;
+  padding: 0 100px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.group {
+  flex: 1;
+  text-align: center;
 }
