--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ html {
 
 body {
   font-family: 'Roboto', sans-serif;
+  background-color: #F4F5F8;
 }
 
 button {
@@ -32,24 +33,35 @@ select {
   min-height: 100vh;
 }
 
-.card {
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin: 10px;
-  padding: 15px;
-  background-color: #fff;
+/* Loader */
+.loader {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20%;
+  width: 80px;
+  height: 80px;
+  padding-left: 0;
 }
 
-.group-container {
-  margin-top: 2rem;
-  display: flex;
-  width: 100%;
-  gap: 5rem;
-  padding: 0 50px;
+.loader:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid #fa9c23;
+  border-color: #fa9c23 transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
 }
 
-.group {
-  flex: 1;
-  text-align: center;
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
